# PlotJuggler

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  COMPILE.md  Dockerfile  Dockerfile-humble-appimage  README.md  conanfile.txt  package.xml
.github/workflows/: codeql.yml  debian.yaml  macos.yaml  pre-commit.yaml  ros2-humble.yaml  ros2-jazzy.yaml  ros2-rolling.yaml  snap_core20.yaml  snap_core22.yaml  snap_core24.yaml  ubuntu.yaml  windows.yaml
DEBIAN/: _control.24.04  _control.bookworm  _control.trixie  postinst
appimage/: AppImage.sh
cmake/: CPM.cmake  Config.cmake.in  FindLZ4.cmake  FindZSTD.cmake  FindZeroMQ.cmake  find_or_download_data_tamer.cmake  find_or_download_dependencies.cmake  find_or_download_fastcdr.cmake  find_or_download_fmt.cmake  find_or_download_json.cmake  find_or_download_lua.cmake  find_or_download_lz4.cmake  find_or_download_zstd.cmake
installer/: config.xml
plotjuggler_app/: CMakeLists.txt  color_map.h  colormap_editor.cpp  colormap_selector.cpp  curvelist_panel.cpp  curvelist_panel.h  curvelist_panel.ui  curvelist_view.cpp  curvelist_view.h  curvetree_view.cpp  curvetree_view.h  customtracker.cpp  customtracker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multifile_prefix.cpp  new_release_dialog.cpp  nlohmann_parsers.cpp  nlohmann_parsers.h  plot_background.cpp  plot_docker.cpp  plot_docker.h  plot_docker_toolbar.cpp  plot_docker_toolbar.h  plot_docker_toolbar.ui  plotwidget.cpp  plotwidget.h  plotwidget_editor.cpp  plotwidget_transforms.cpp  plotwidget_transforms.h  plotwidget_transforms.ui  point_series_xy.cpp  preferences_dialog.cpp  preferences_dialog.ui  resource.qrc  statistics_dialog.cpp  statistics_dialog.h  statistics_dialog.ui  (+5 more)
plotjuggler_app/cheatsheet/: cheatsheet_dialog.cpp  cheatsheet_dialog.ui
plotjuggler_app/resources/: default.snippets.xml
plotjuggler_app/transforms/: custom_function.cpp  custom_function.h  first_derivative.cpp  first_derivative.ui  function_editor.cpp  function_editor.h  function_editor.ui  integral_transform.ui  lua_custom_function.cpp  lua_custom_function.h  moving_average_filter.cpp  moving_rms.cpp  moving_variance.cpp  samples_count.cpp  (+4 more)
plotjuggler_plugins/: CMakeLists.txt  selectlistdialog.h
plotjuggler_plugins/DataLoadCSV/: CMakeLists.txt  dataload_csv.cpp  dataload_csv.ui
plotjuggler_plugins/DataLoadMCAP/: CMakeLists.txt  dataload_mcap.cpp  dataload_params.h  dialog_mcap.cpp  dialog_mcap.h  dialog_mcap.ui  mcap.cpp
plotjuggler_plugins/DataLoadParquet/: CMakeLists.txt  dataload_parquet.cpp  dataload_parquet.h
plotjuggler_plugins/DataLoadParquet/cmake/: FindArrow.cmake  FindParquet.cmake
plotjuggler_plugins/DataLoadULog/: CMakeLists.txt  dataload_ulog.cpp  dataload_ulog.h  string_view.hpp  ulog_parameters_dialog.cpp  ulog_parser.cpp  ulog_parser.h
plotjuggler_plugins/DataStreamMQTT/: CMakeLists.txt  mqtt_client.cpp  mqtt_client.h  mqtt_dialog.cpp
plotjuggler_plugins/DataStreamMQTT/cmake/: FindMOSQUITTO.cmake
plotjuggler_plugins/DataStreamSample/: CMakeLists.txt  datastream_sample.cpp  datastream_sample.h
plotjuggler_plugins/DataStreamUDP/: CMakeLists.txt  udp_client.py  udp_server.cpp
plotjuggler_plugins/DataStreamWebsocket/: CMakeLists.txt  websocket_server.cpp
plotjuggler_plugins/DataStreamZMQ/: CMakeLists.txt  datastream_zmq.cpp  datastream_zmq.h  zmq.hpp
plotjuggler_plugins/DataStreamZMQ/utilities/: start_test_publisher.py
plotjuggler_plugins/DataStreamZcm/: CMakeLists.txt  datastream_zcm.cpp  datastream_zcm.h  datastream_zcm.ui
plotjuggler_plugins/ParserDataTamer/: CMakeLists.txt  datatamer_parser.cpp  datatamer_parser.h
plotjuggler_plugins/ParserIDL/: CMakeLists.txt  idl_parser.cpp  idl_parser.hpp
plotjuggler_plugins/ParserLineInflux/: CMakeLists.txt  line_parser.cpp  line_parser.h  sample_telegraf.conf
plotjuggler_plugins/ParserProtobuf/: CMakeLists.txt  error_collectors.cpp  error_collectors.h  protobuf_factory.cpp  protobuf_factory.h  protobuf_parser.cpp  protobuf_parser.h
plotjuggler_plugins/ParserROS/: CMakeLists.txt  ros1_parser.h  ros2_parser.h  ros_parser.cpp  ros_parser.h  special_messages.h
plotjuggler_plugins/ParserROS/rosx_introspection/: CMakeLists.txt
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/: builtin_types.hpp  deserializer.hpp  ros_parser.hpp  ros_type.hpp  tree.hpp  variant.hpp
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/contrib/: SmallVector.h  nanocdr.hpp  span.hpp
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/details/: conversion_impl.hpp
plotjuggler_plugins/ParserROS/rosx_introspection/src/: ros_field.cpp  ros_parser.cpp
plotjuggler_plugins/PluginsZcm/: CMakeLists.txt  config_zcm.cpp  dataload_zcm.cpp  dataload_zcm.h  datastream_zcm.cpp  datastream_zcm.h
plotjuggler_plugins/PluginsZcm/cmake/: FindZcm.cmake
plotjuggler_plugins/StatePublisherCSV/: CMakeLists.txt  publisher_csv.cpp
plotjuggler_plugins/ToolboxFFT/: CMakeLists.txt  toolbox_FFT.cpp
plotjuggler_plugins/ToolboxLuaEditor/: CMakeLists.txt  lua_editor.cpp  lua_editor.h  lua_editor.ui
plotjuggler_plugins/ToolboxQuaternion/: CMakeLists.txt  quaternion_to_rpy.cpp  toolbox_quaternion.cpp
plotjuggler_plugins/ToolboxRemote/: CMakeLists.txt  dialog_file_selection.ui  toolbox_remote.cpp  toolbox_remote.h  widget_remote_load.cpp  widget_remote_load.hpp  widget_remote_load.ui
plotjuggler_plugins/ToolboxRemote/mcap_api/: CMakeLists.txt  mcap_api.h  mcap_protocol.cpp  mcap_protocol.h
plotjuggler_plugins/ToolboxRemote/mcap_client/: CMakeLists.txt  mcap_client.cpp  mcap_client.h
plotjuggler_plugins/ToolboxRemote/mcap_files/: CMakeLists.txt  mcap_files.cpp  mcap_files.h
plotjuggler_plugins/VideoViewer/: CMakeLists.txt  qoi.h  video_dialog.cpp  video_viewer.cpp
plotjuggler_plugins/VideoViewer/cmake/: FindLIBVLC.cmake  FindQtAV.cmake
plotjuggler_plugins/ZcmUtils/: CMakeLists.txt
snap/: snapcraft.yaml
snap_core22/: snapcraft.yaml
snap_core24/: snapcraft.yaml
src/: plot_docker.cpp
tools/: .codespell_ignore_words
(+27 files in other folders)
