add_subdirectory( DataLoadCSV )
add_subdirectory( DataLoadMCAP )
add_subdirectory( DataLoadParquet )
add_subdirectory( DataLoadULog )

add_subdirectory( DataStreamSample )
add_subdirectory( DataStreamWebsocket )
add_subdirectory( DataStreamUDP )
add_subdirectory( DataStreamMQTT )
add_subdirectory( DataStreamZMQ )

add_subdirectory( StatePublisherCSV )
add_subdirectory( VideoViewer )

add_subdirectory( ToolboxQuaternion )
add_subdirectory( ToolboxFFT )
add_subdirectory( ToolboxLuaEditor )

add_subdirectory( ParserProtobuf )
add_subdirectory( ParserROS )
add_subdirectory( ParserDataTamer )
add_subdirectory( ParserLineInflux )

add_subdirectory( PluginsZcm )

add_subdirectory( ParserIDL )
